# 2onnx2chip

./: .gitignore  README.md  pyproject.toml  repair_python_env.sh
.mimocode/: .cron-lock
.mimocode/plans/: 1783410633355-proud-orchid.md
doc/: Quant.md  memory_optimization_notes.md
src/tonnx2chip/: __init__.py  cli.py  constants.py
src/tonnx2chip/config/: keep_dtype.list  nuq_base.cfg
src/tonnx2chip/export/: convert_onnx2om.sh  export_om.py  export_onnx.py
src/tonnx2chip/infer/: infer_om.py  infer_om_fast.py  infer_om_prefill_onnx_decode.py  infer_onnx_prefill_om_decode.py  infer_onnx_vit_om_rest.py
src/tonnx2chip/optimize/: optimize_onnx.py  pad_to_slice.py
src/tonnx2chip/quantize/: quant_nuq.py  quant_uniform.py
src/tonnx2chip/tools/: memory_monitor.py  monitor_mem.sh
src/tonnx2chip/validate/: val_om.py  val_onnx.py
